[metadata]
name = basic_pkg_viky
version = 1.0.0
author = Vignesh Vallavan
author_email = vigneshvallavan1999@gmail.com
description = A simple Python package
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/vigneshvallavan/Python_Pkg/tree/main/basic_pkg_viky
project_urls =
    Bug Tracker = https://github.com/vigneshvallavan/Python_Pkg/tree/main/basic_pkg_viky/issues
    repository = https://github.com/vigneshvallavan/Python_Pkg/tree/main/basic_pkg_viky
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src